--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/motion": "^2.2.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "signature_pad": "^5.0.4",
     "tailwind-merge": "^2.5.5",
