--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.5",
     "@vueup/vue-quill": "^1.2.0",
-    "@vueuse/motion": "^2.2.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "qrcode": "^1.5.4",
     "signature_pad": "^5.0.4",
     "tailwind-merge": "^2.5.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "zod": "^3.24.1"
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
